# nix

./: .envrc  .gitignore  .gitmodules  .sops.yaml  .windsurfrules  CLAUDE.md  DENDRITIC_REFACTOR_PLAN.md  GOAL.md  LLM.md  PLANNING.md  README.md  TASK.md  container-digest.nix  devenv.nix  devenv.yaml  flake.nix  justfile  mcp-config.json  mcp-prompt.txt  nix4vscode.nix  npm-refresh.nix  package-lock.json  proxmox-provision-nixos.sh  secrets.enc.yaml  shell.nix  substituter.nix
.claude/agents/: colmena-deployer.md  container-manager.md  darwin-config-specialist.md  dendritic-architecture-reviewer.md  dendritic-darwin-reviewer.md  dendritic-feature-reviewer.md  dendritic-hm-reviewer.md  dendritic-services-reviewer.md  flake-manager.md  home-manager-tweaker.md  nix-module-architect.md  nixos-service-debugger.md  sops-secrets-auditor.md
.claude/commands/: container-update-report.md  update-all-remote.md
.claude/skills/: nix-dendritic-pattern.md
.claude/workflows/: colmena-deploy.js
apps/: adguard.nix  agent-browser.nix  blocky.nix  cclsp.nix  ccstatusline.nix  ccusage-bar.nix  ccusage-tmux.nix  ccusage.nix  claude-usage.nix  fish.nix  gitea-mcp.nix  gitea-runner-1.nix  gitea.nix  grafana.nix  gws.nix  herder.nix  hypa.nix  hyprland.nix  jellyseerr.nix  kitty.nix  kuma-waybar.nix  mermaid-cli-wrapped.nix  n8n.nix  nushell.nix  overseerr.nix  pi-ask-user-question.nix  pi-coding-agent.nix  pi-context-mode.nix  pi-dynamic-workflows.nix  pi-goal-x.nix  pi-hooks.nix  pi-hypa.nix  pi-interactive-subagents.nix  pi-lsp.nix  pi-mcp-adapter.nix  pi-rpiv-todo.nix  pi-simplify.nix  pi-web-access.nix  prometheus.nix  prowlarr.nix  (+13 more)
apps/graphify/: pyproject.toml
apps/pyicloud/: pyproject.toml
colmena/: default.nix
development/: flake.nix  vscode-extensions.toml
docs/: nixarr-to-podman-migration.md
homefiles/: finicky.js  ideavimrc  wezterm.lua
lib/: darwin-infra.nix  mk-cifs-mount.nix  mk-home-manager.nix  mk-neovim-packages.nix  mk-nginx-proxy.nix  mk-nixpkgs-version.nix  mk-podman-network.nix  mk-prometheus-node-exporter.nix  mkPkgs.nix  my-options-module.nix  nixos-infra.nix
overlays/: default.nix  glance.nix  graphify.nix  highlight.nix  pyicloud.nix
scripts/: system-flake-rebuild-trace.sh  system-flake-rebuild.sh
systems/: darwin.nix  nixos.nix
(+524 files in other folders)
